--- a/Client/pokemons/src/App.scss
+++ b/Client/pokemons/src/App.scss
@@ -99,3 +99,59 @@ body{
       }
   }
 }
+
+@media (max-width: 480px), (max-width: 768px) {
+  .pokemonHeader {
+    flex-direction: column;
+    height: auto;
+    padding: 12px;
+    margin-top: 16px;
+
+    img {
+      margin-bottom: 16px;
+    }
+  }
+
+  .buttonContainer {
+    margin-top: 16px;
+    width: 100%;
+
+    .pokemonList,
+    .myPokemons {
+      width: 100%;
+      margin-right: 8px;
+
+      &:last-child {
+        margin-right: 0;
+      }
+    }
+  }
+  .cardPokemon{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    div{
+      margin: 16px 0;
+      width: 100%;
+      max-width: 300px;
+      height: 200px;
+    }
+  }
+  .pokemonFooter {
+    margin-top: 16px;
+  }
+
+  .buttonContainerFooter{
+    width: 100%;
+
+    button{
+      width: 100%;
+      margin-right: 8px;
+
+       &:last-child {
+        margin-right: 0;
+      }
+    }
+  }
+}
