--- a/Client/pokemons/src/App.scss
+++ b/Client/pokemons/src/App.scss
@@ -139,7 +139,8 @@ body{
       margin: 16px 0;
       width: 100%;
       max-width: 300px;
-      height: 200px;
+      height: auto;
+      
     }
   }
   .pokemonFooter {
