--- a/Client/pokemons/src/App.scss
+++ b/Client/pokemons/src/App.scss
@@ -104,6 +104,81 @@ body{
   }
 }
 
+// Popup вікно 
+.popup {
+  width: 100% !important;
+  height: 100% !important;
+  position: fixed;
+  left: -37px;
+  top: -34px;
+  
+  background: rgba(0, 0, 0, 0.3);
+
+
+  &--open {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+    .popup__content {
+      display: flex;
+      flex-direction: row;
+      align-items: flex-start;
+      overflow: auto;
+      position: relative;
+      background-color: #fff;
+      border-radius: 16px;
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+      width: 688px;
+      height: 666px;
+    }
+    
+    .popup__table {
+      width: 100%;
+      border-collapse: collapse;
+      display: flex;
+      justify-content: right;
+      flex-direction: column;
+    
+      tr {
+        display: flex;
+        border-bottom: 1px solid #C6C5C9;
+        padding: 0.5rem;
+        font-weight: bold;
+      }
+    }
+  }
+
+  &__close {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 36px;
+    height: 36px;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    border: none;
+    color: #EBA000;
+    background: #EEEDF0;
+    border-radius: 12px;
+    padding: 12px;
+    font-size: 1.1rem;
+    cursor: pointer;
+  }
+}
+.valuePokemonTd{
+  font-weight: normal;
+}
+.pokemonDetails{
+  border: none !important;
+  padding: 0 !important;
+  margin: 0 32px !important;
+}
+
+// 
+
+
 @media (max-width: 480px), (max-width: 768px) {
   .pokemonHeader {
     flex-direction: column;
