--- a/Client/pokemons/src/App.scss
+++ b/Client/pokemons/src/App.scss
@@ -98,9 +98,10 @@ body{
           cursor: pointer;
       }
 
-      &.active {
-          background: #EBA000;
-      }
+      &:active {
+        background: #EBA000;
+        color: #0B213F;
+    }
   }
 }
 
@@ -110,10 +111,8 @@ body{
   height: 100% !important;
   position: fixed;
   left: -37px;
-  top: -34px;
-  
+  top: -34px; 
   background: rgba(0, 0, 0, 0.3);
-
 
   &--open {
     display: flex;
@@ -247,6 +246,56 @@ body{
        &:last-child {
         margin-right: 0;
       }
+
+      &:active {
+        background: #EBA000;
+        color: #0B213F;
     }
+  }
+  }
+  // Popup
+  .popup {
+    position: fixed;
+    left: 10px;
+    background: rgba(0, 0, 0, 0.3);
+    &--open {
+      .popup__content {
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        height: auto;
+        border-radius: 0;
+        box-shadow: none;
+        padding: 20px;
+        overflow: hidden;
+      }
+      
+      .popup__table {
+        margin-top: 20px;
+        width: 100%;
+      }
+    }
+    &__close{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 28px;
+      height: 28px;
+      position: absolute;
+      top: 5px;
+      right: 5px;
+      border: none;
+      color: #EBA000;
+      background: #EEEDF0;
+      border-radius: 12px;
+      padding: 8px;
+      font-size: 1.1rem;
+      cursor: pointer;
+    }
+    
+  }
+
+  .addToMyList, .evolutionPokemon {
+    width: 100%;
   }
 }
